crates/bitnet-kernels/tests/snapshots/snapshot_wave24__w24_pipeline_config_four_stage_pipedream.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave24.rs
expression: cfg
---
PipelineConfig {
    stages: [
        PipelineStage {
            start_layer: 0,
            end_layer: 8,
            thread_affinity: Some(
                0,
            ),
        },
        PipelineStage {
            start_layer: 8,
            end_layer: 16,
            thread_affinity: Some(
                1,
            ),
        },
        PipelineStage {
            start_layer: 16,
            end_layer: 24,
            thread_affinity: Some(
                2,
            ),
        },
        PipelineStage {
            start_layer: 24,
            end_layer: 32,
            thread_affinity: Some(
                3,
            ),
        },
    ],
    micro_batch_size: 2,
    schedule: PipeDream,
}
