crates/bitnet-kernels/tests/snapshots/snapshot_wave24__w24_pipeline_config_num_stages.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave24.rs
expression: "format!(\"num_stages={}\", cfg.num_stages())"
---
num_stages=3
