crates/bitnet-kernels/tests/snapshots/snapshot_wave24__w24_pipeline_config_validate_empty_stages.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave24.rs
expression: err.to_string()
---
Kernel error: Invalid arguments: pipeline must have at least one stage
