crates/bitnet-kernels/tests/snapshots/snapshot_wave24__w24_pipeline_config_validate_ok.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave24.rs
expression: cfg
---
PipelineConfig {
    stages: [
        PipelineStage {
            start_layer: 0,
            end_layer: 16,
            thread_affinity: None,
        },
    ],
    micro_batch_size: 1,
    schedule: Sequential,
}
