crates/bitnet-kernels/tests/snapshots/snapshot_wave24__w24_pipeline_config_validate_zero_micro_batch.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave24.rs
expression: err.to_string()
---
Kernel error: Invalid arguments: micro_batch_size must be > 0
