crates/bitnet-kernels/tests/snapshots/snapshot_wave24__w24_pipeline_schedule_all_variants.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave24.rs
expression: variants
---
[
    Sequential,
    GPipe,
    PipeDream,
    Interleaved,
]
