crates/bitnet-kernels/tests/snapshots/snapshot_wave24__w24_pipeline_schedule_display.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave24.rs
expression: displays
---
[
    "Sequential",
    "GPipe",
    "PipeDream",
    "Interleaved",
]
