crates/bitnet-kernels/tests/snapshots/snapshot_wave24__w24_pipeline_stage_num_layers.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave24.rs
expression: "format!(\"num_layers={}\", stage.num_layers())"
---
num_layers=12
