crates/bitnet-kernels/tests/snapshots/snapshot_wave24__w24_pipeline_stage_simple.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave24.rs
expression: stage
---
PipelineStage {
    start_layer: 0,
    end_layer: 6,
    thread_affinity: None,
}
