crates/bitnet-kernels/tests/snapshots/snapshot_wave24__w24_pipeline_stage_with_affinity.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave24.rs
expression: stage
---
PipelineStage {
    start_layer: 6,
    end_layer: 12,
    thread_affinity: Some(
        3,
    ),
}
