crates/bitnet-kernels/tests/snapshots/snapshot_wave24__w24_positional_encoding_4x4.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave24.rs
expression: rounded
---
[
    0.0,
    1.0,
    0.0,
    1.0,
    0.8415,
    0.5403,
    0.01,
    1.0,
    0.9093,
    -0.4161,
    0.02,
    0.9998,
    0.1411,
    -0.99,
    0.03,
    0.9996,
]
